Add credit for XSS vulnerability discovery

--- a/README.mkd
+++ b/README.mkd
@@ -2,7 +2,7 @@ Release Notes  -  SABnzbd 1.1.0RC2
 ==================================
 
 ## What's new in 1.1.0RC2
-- Fix XSS vulnerability on OSX and Unix
+- Fix XSS vulnerability on OSX and Unix**
 - Fix for stalling when using "prospective par2 dowloading"
 - Include the Python module "six" to prevent issues on some embedded systems
 - Fix problem with deleting files in NZB details view
@@ -10,6 +10,8 @@ Release Notes  -  SABnzbd 1.1.0RC2
 - Restore scanning for passwords after nZB name edit
 - Prevent old shutdown-page from stopping a new SABnzbd instance
 
+** The XSS vulnerability was discovered by Han Sahin from Securify BV.
+Thank you, Han.
 
 ## What's new in 1.1.0RC1
 - Fix for stalling download at 99% (when using prospective downloading)
